--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
     <script src="js/jautocalc.js"></script>
     <script src="js/script.js"></script>
     <script src="js/register.js"></script>
-    <script src="manifest.json"></script>
     <script src="js/apps.js"></script>
+    <script src="service-worker.js"></script>
     
 </body>
 </html>
