--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             background-size: 50px 50px;
             width: 650px;
         }
+        .splash img{
+            margin-top: 200px;
+        }
     </style>
 
 
@@ -28,7 +31,8 @@
 <body>
 
     <div class="splash">
-        <h1 class="fade-in">Selamat Datang Di Website Glosir Sembako</h1>
+        <!-- <h1 class="fade-in">Selamat Datang Di Website Glosir Sembako</h1> -->
+        <img src="assets/images/Glosir.png" width="200px"s alt="">
     </div>
     
     <center><p id="p"> Glosir Sembako</p></center>
