--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             background-color: rgb(254, 216, 166);
             border-radius: 100px 100px 100px 100px;
             background-size: 50px 50px;
-            width: 650px;
+            width: 700px;
         }
         .splash img{
             margin-top: 200px;
@@ -35,7 +35,7 @@
         <img src="assets/images/Glosir.png" width="200px"s alt="">
     </div>
     
-    <center><p id="p"> Glosir Sembako</p></center>
+    <center><p id="p"><img src="assets/images/Glosir.png" width="80px" alt=""> Glosir Sembako</p></center>
     
 
     <div class="container" style="width: 700px;">
